Partial fix for playlist title and description overflow
This change means that text-ellipsis no longer works, but it looks like that might have been a mistake. Because when it worked correctly, there was no way for the user to read the full playlist title when it was too long. Now the title and description text will wrap properly and not be cut off. Unfortunately this pushes the search bar to the bottom and causes it to be partially cut off, so that has to be fixed

--- a/src/renderer/components/playlist-info/playlist-info.scss
+++ b/src/renderer/components/playlist-info/playlist-info.scss
@@ -27,6 +27,7 @@
 
 .playlistTitle {
   margin-block-end: 0.1em;
+  word-break: break-word;
 }
 
 .playlistDescription {
@@ -34,6 +35,7 @@
   overflow-y: auto;
   white-space: break-spaces;
   margin-inline: auto;
+  word-break: break-word;
 
   @media only screen and (width <= 500px) {
     max-block-size: 10vh;
@@ -153,7 +155,6 @@
   .playlistTitle,
   .top-bar .playlistDescription {
     overflow-x: hidden;
-    white-space: nowrap;
     text-overflow: ellipsis;
   }
 }
